fix button issue on iphone

--- a/src/components/handshakes/exchange/Feed/FeedMeCash.scss
+++ b/src/components/handshakes/exchange/Feed/FeedMeCash.scss
@@ -90,6 +90,7 @@
   .modal-more-info-content {
     position: relative;
     .button-close {
+      padding: 0 6px;
       color: white;
       position: absolute;
       right: -15px;
